# Wallpaper-Generator

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
